# devcontainer_template

./: .gitignore  .pre-commit-config.yaml  README.MD  __main__.py  main.py  pyproject.toml
.devcontainer/: DockerFile  devcontainer.json  post_create.sh  zshrc
tests/: main_tests.py
utils/: logger.py
